[gd_scene load_steps=15 format=3 uid="uid://cir4dtbp7i1ky"]

[ext_resource type="Script" path="res://navmesh_chhunks_demo_3d.gd" id="1_027f2"]
[ext_resource type="PackedScene" uid="uid://c7roel4r67wn3" path="res://debug_overlay.tscn" id="2_1dnyo"]
[ext_resource type="PackedScene" uid="uid://u5x0rrgli1n" path="res://mono.tscn" id="3_p2eve"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_p73ky"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_k64yg"]
sky_material = SubResource("ProceduralSkyMaterial_p73ky")

[sub_resource type="Environment" id="Environment_ccmns"]
background_mode = 2
sky = SubResource("Sky_k64yg")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_8p3iq"]
albedo_color = Color(0.2, 0.2, 0.2, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yn2x6"]
size = Vector3(75, 1, 75)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_7rw3x"]
points = PackedVector3Array(-75, -0.5, -75, -75, 0.5, -75, 75, -0.5, -75, -75, -0.5, 75, -75, 0.5, 75, 75, 0.5, -75, 75, -0.5, 75, 75, 0.5, 75)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3kxje"]
albedo_color = Color(0.5, 0, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_hdqb8"]
size = Vector3(5, 4, 5)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ydj0h"]
points = PackedVector3Array(-2.5, -2, -2.5, -2.5, 2, -2.5, 2.5, -2, -2.5, -2.5, -2, 2.5, -2.5, 2, 2.5, 2.5, 2, -2.5, 2.5, -2, 2.5, 2.5, 2, 2.5)

[sub_resource type="SphereShape3D" id="SphereShape3D_8nxeg"]
radius = 0.18517

[sub_resource type="PlaneMesh" id="PlaneMesh_cd32c"]

[node name="NavMeshChunksDemo3D" type="Node3D"]
script = ExtResource("1_027f2")

[node name="DebugOverlay" parent="." instance=ExtResource("2_1dnyo")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-4.37114e-08, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, 3.09086e-08, -3.09086e-08, -30.333, 26.981, -7.47)
projection = 1
current = true
fov = 40.0
size = 59.808

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866024, -0.433016, 0.250001, 0, 0.499998, 0.866026, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ccmns")

[node name="ParseRootNode" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Ground" type="MeshInstance3D" parent="ParseRootNode"]
material_override = SubResource("StandardMaterial3D_8p3iq")
mesh = SubResource("BoxMesh_yn2x6")

[node name="StaticBody3D" type="StaticBody3D" parent="ParseRootNode/Ground"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/Ground/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_7rw3x")

[node name="CenterBlock2" type="MeshInstance3D" parent="ParseRootNode"]
transform = Transform3D(15.6159, 0, 0, 0, 1, 0, 0, 0, 1, -0.513873, 2.19831, -37.8633)
material_override = SubResource("StandardMaterial3D_3kxje")
mesh = SubResource("BoxMesh_hdqb8")

[node name="NavmeshDiscard" type="NavigationObstacle3D" parent="ParseRootNode/CenterBlock2"]
transform = Transform3D(2.4086, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40727, 2.67487)
height = 3.0
affect_navigation_mesh = true
avoidance_enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="ParseRootNode/CenterBlock2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/CenterBlock2/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_ydj0h")

[node name="CenterBlock3" type="MeshInstance3D" parent="ParseRootNode"]
transform = Transform3D(15.6159, 0, 0, 0, 0.501777, 0, 0, 0, 1, -0.513873, 0.0286465, 35.5385)
material_override = SubResource("StandardMaterial3D_3kxje")
mesh = SubResource("BoxMesh_hdqb8")

[node name="NavmeshDiscard" type="NavigationObstacle3D" parent="ParseRootNode/CenterBlock3"]
transform = Transform3D(2.4086, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40727, 2.67487)
height = 3.0
affect_navigation_mesh = true
avoidance_enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="ParseRootNode/CenterBlock3"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/CenterBlock3/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_ydj0h")

[node name="CenterBlock4" type="MeshInstance3D" parent="ParseRootNode"]
transform = Transform3D(-6.82594e-07, 0, -1, 0, 1, 0, 15.6159, 0, -4.37114e-08, 35.5666, 2.19831, -3.57813)
material_override = SubResource("StandardMaterial3D_3kxje")
mesh = SubResource("BoxMesh_hdqb8")

[node name="NavmeshDiscard" type="NavigationObstacle3D" parent="ParseRootNode/CenterBlock4"]
transform = Transform3D(2.4086, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40727, 2.67487)
height = 3.0
affect_navigation_mesh = true
avoidance_enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="ParseRootNode/CenterBlock4"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/CenterBlock4/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_ydj0h")

[node name="CenterBlock5" type="MeshInstance3D" parent="ParseRootNode"]
transform = Transform3D(-6.82594e-07, 0, -1, 0, 1, 0, 15.6159, 0, -4.37114e-08, -39.2407, 2.19831, -3.57813)
material_override = SubResource("StandardMaterial3D_3kxje")
mesh = SubResource("BoxMesh_hdqb8")

[node name="NavmeshDiscard" type="NavigationObstacle3D" parent="ParseRootNode/CenterBlock5"]
transform = Transform3D(2.4086, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.40727, 2.67487)
height = 3.0
affect_navigation_mesh = true
avoidance_enabled = false

[node name="StaticBody3D" type="StaticBody3D" parent="ParseRootNode/CenterBlock5"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/CenterBlock5/StaticBody3D"]
shape = SubResource("ConvexPolygonShape3D_ydj0h")

[node name="Checkpoint_1" type="Area3D" parent="ParseRootNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.7504, 1.72873, 8.88088)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/Checkpoint_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0171, 0)
shape = SubResource("SphereShape3D_8nxeg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParseRootNode/Checkpoint_1"]
transform = Transform3D(0.241652, 0, 0, 0, 1.31722, 0, 0, 0, 0.26732, 0, -1.1555, 0)
mesh = SubResource("PlaneMesh_cd32c")

[node name="Checkpoint_2" type="Area3D" parent="ParseRootNode"]
process_mode = 3
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.15396, 1.72873, 3.40714)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/Checkpoint_2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0171, 0)
shape = SubResource("SphereShape3D_8nxeg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParseRootNode/Checkpoint_2"]
transform = Transform3D(0.241652, 0, 0, 0, 1.31722, 0, 0, 0, 0.26732, 0, -1.1555, 0)
mesh = SubResource("PlaneMesh_cd32c")

[node name="Checkpoint_3" type="Area3D" parent="ParseRootNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.6872, 1.72873, 21.4337)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/Checkpoint_3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0171, 0)
shape = SubResource("SphereShape3D_8nxeg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParseRootNode/Checkpoint_3"]
transform = Transform3D(0.241652, 0, 0, 0, 1.31722, 0, 0, 0, 0.26732, 0, -1.1555, 0)
mesh = SubResource("PlaneMesh_cd32c")

[node name="Checkpoint_4" type="Area3D" parent="ParseRootNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.7691, 1.72873, 10.714)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/Checkpoint_4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0171, 0)
shape = SubResource("SphereShape3D_8nxeg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParseRootNode/Checkpoint_4"]
transform = Transform3D(0.241652, 0, 0, 0, 1.31722, 0, 0, 0, 0.26732, 0, -1.1555, 0)
mesh = SubResource("PlaneMesh_cd32c")

[node name="Checkpoint_5" type="Area3D" parent="ParseRootNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.7691, 1.72873, -15.8395)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/Checkpoint_5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0171, 0)
shape = SubResource("SphereShape3D_8nxeg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParseRootNode/Checkpoint_5"]
transform = Transform3D(0.241652, 0, 0, 0, 1.31722, 0, 0, 0, 0.26732, 0, -1.1555, 0)
mesh = SubResource("PlaneMesh_cd32c")

[node name="Checkpoint_6" type="Area3D" parent="ParseRootNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.47302, 1.72873, -24.8065)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/Checkpoint_6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0171, 0)
shape = SubResource("SphereShape3D_8nxeg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParseRootNode/Checkpoint_6"]
transform = Transform3D(0.241652, 0, 0, 0, 1.31722, 0, 0, 0, 0.26732, 0, -1.1555, 0)
mesh = SubResource("PlaneMesh_cd32c")

[node name="Checkpoint_7" type="Area3D" parent="ParseRootNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.0392, 1.72873, -24.8065)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/Checkpoint_7"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0171, 0)
shape = SubResource("SphereShape3D_8nxeg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParseRootNode/Checkpoint_7"]
transform = Transform3D(0.241652, 0, 0, 0, 1.31722, 0, 0, 0, 0.26732, 0, -1.1555, 0)
mesh = SubResource("PlaneMesh_cd32c")

[node name="Checkpoint_8" type="Area3D" parent="ParseRootNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.7467, 1.72873, -10.677)

[node name="CollisionShape3D" type="CollisionShape3D" parent="ParseRootNode/Checkpoint_8"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.0171, 0)
shape = SubResource("SphereShape3D_8nxeg")

[node name="MeshInstance3D" type="MeshInstance3D" parent="ParseRootNode/Checkpoint_8"]
transform = Transform3D(0.241652, 0, 0, 0, 1.31722, 0, 0, 0, 0.26732, 0, -1.1555, 0)
mesh = SubResource("PlaneMesh_cd32c")

[node name="DebugPaths" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="PathDebugCorridorFunnel" type="NavigationAgent3D" parent="DebugPaths"]
unique_name_in_owner = true
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 0, 1, 1)
debug_path_custom_point_size = 10.0

[node name="PathDebugEdgeCentered" type="NavigationAgent3D" parent="DebugPaths"]
unique_name_in_owner = true
path_postprocessing = 1
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(1, 1, 0, 1)
debug_path_custom_point_size = 10.0

[node name="DebugMousePos" type="Node3D" parent="DebugPaths"]
unique_name_in_owner = true

[node name="ChunksContainer" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Use cursor button to set path start position"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 8)
layout_mode = 2
size_flags_vertical = 4
color = Color(1, 0, 1, 1)

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Path  corridor-funnel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(128, 8)
layout_mode = 2
size_flags_vertical = 4
color = Color(1, 1, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Path edge-centered"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mono" parent="." instance=ExtResource("3_p2eve")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -29.1961, 2.24041, 0)

[node name="Mono2" parent="." instance=ExtResource("3_p2eve")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -29.1961, 2.24041, 22.0518)

[node name="Mono3" parent="." instance=ExtResource("3_p2eve")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4.14527, 2.24041, 22.0518)

[node name="Mono4" parent="." instance=ExtResource("3_p2eve")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.5752, 2.24041, -10.9419)
